# spectro_inlets_quantification

./: .readthedocs.yaml  AUTHORS  DUAL_LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-rtd.txt  requirements.txt  setup.py  tasks.py
docs/source/: api.md  conf.py  index.md
docs/source/api/: config.md  constants.md  exceptions.md  medium.md  tools.md
docs/source/theory/: quant_ms.md
src/spectro_inlets_quantification/: __init__.py  calibration.py  chip.py  compatability.py  config.py  constants.py  custom_types.py  exceptions.py  medium.py  mixture.py  molecule.py  peak.py  quantifier.py  sensitivity.py  signal.py  tools.py
src/spectro_inlets_quantification/data/chips/: standard.json
src/spectro_inlets_quantification/data/molecules/: Ar.json  CO.json  CO2.json  H2.json  He.json  He.yml
tests/functional_tests/: test_molecule.py
tests/unittests/: test_config.py  test_exceptions.py  test_medium.py  test_molecule.py  test_peak.py  test_signal.py  test_tools.py
